[gd_scene load_steps=2 format=3 uid="uid://vjkw6gtfgppx"]

[ext_resource type="Script" path="res://Scenes/Games/Utility/CardButton/card_button.gd" id="1_bii8j"]

[node name="CardButton" type="Button"]
offset_right = 84.0
offset_bottom = 151.2
flat = true
script = ExtResource("1_bii8j")

[node name="AnimationClock" type="Timer" parent="."]

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="timeout" from="AnimationClock" to="." method="_on_animation_clock_timeout"]
